--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Upload built binary
       uses: actions/upload-artifact@v2
       with:
-        name: binary-${{ matrix.os }}
+        name: AppleTVRestarter-${{ matrix.os }}
         path: ./AppleTVRestarter
 
   release:
@@ -62,8 +62,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./binary-ubuntu-latest/AppleTVRestarter
-        asset_name: AppleTVRestarter-ubuntu-amd64
+        asset_path: ./binary-ubuntu-latest/AppleTVRestarter-ubuntu-latest
+        asset_name: AppleTVRestarter-ubuntu-latest-amd64
         asset_content_type: application/octet-stream
 
     - name: Attach binaries to release (macOS)
@@ -72,8 +72,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./binary-macos-latest/AppleTVRestarter
-        asset_name: AppleTVRestarter-macos-amd64
+        asset_path: ./binary-macos-latest/AppleTVRestarter-macos-latest
+        asset_name: AppleTVRestarter-macos-latest-amd64
         asset_content_type: application/octet-stream
 
     - name: Attach binaries to release (Windows)
@@ -82,6 +82,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./binary-windows-latest/AppleTVRestarter
-        asset_name: AppleTVRestarter-windows-amd64
+        asset_path: ./binary-windows-latest/AppleTVRestarter-windows-latest
+        asset_name: AppleTVRestarter-windows-latest-amd64
         asset_content_type: application/octet-stream
