--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,9 @@ jobs:
     - name: Build
       run: go build -ldflags "-X main.GitCommit=$(git rev-parse --short HEAD)"
 
+    - name: Display file structure
+      run: ls -R
+
     - name: Upload built binary
       uses: actions/upload-artifact@v3
       with:
@@ -42,9 +45,8 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - uses: actions/download-artifact@v3
-      with:
-        name: Download all artifacts
+    - name: Download all artifacts
+      uses: actions/download-artifact@v3
 
     - name: Display structure of downloaded files
       run: ls -R
