--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,11 +7,20 @@ on:
 
 jobs:
   build:
-    name: Build on ${{ matrix.os }}
+    name: Build on ${{ matrix.os }} ${{ matrix.arch }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        include:
+          - os: ubuntu-latest
+            arch: amd64
+          - os: ubuntu-latest
+            arch: arm64
+          - os: macos-latest
+            arch: amd64
+          - os: windows-latest
+            arch: amd64
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -94,4 +103,14 @@ jobs:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./AppleTVRestarter-windows-latest/AppleTVRestarter.exe
         asset_name: AppleTVRestarter-windows-latest-amd64.exe
+        asset_content_type: application/octet-stream
+
+    - name: Attach binaries to release (Ubuntu-arm64)
+      uses: actions/upload-release-asset@v1.0.2
+      env:
+         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./AppleTVRestarter-ubuntu-latest-arm64/AppleTVRestarter
+        asset_name: AppleTVRestarter-ubuntu-latest-arm64
         asset_content_type: application/octet-stream
