--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,11 @@ jobs:
         GO111MODULE: "auto"
 
     - name: Build
-      run: go build -ldflags "-X main.GitCommit=$(git rev-parse --short HEAD)"
+      run: |
+           if [ "$RUNNER_ARCH" == "ARM64" ]; then
+               GOOS=linux GOARCH=arm64 go build -ldflags "-X main.GitCommit=$(git rev-parse --short HEAD)"
+           else
+               go build -ldflags "-X main.GitCommit=$(git rev-parse --short HEAD)"
 
     - name: Display file structure
       run: ls -R
