--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,9 +38,10 @@ jobs:
     - name: Build
       run: |
            if [ "$RUNNER_ARCH" == "arm64" ]; then
-               env GOOS=${{runner.os}} GOARCH=${{runner.arch}} go build -ldflags "-X main.GitCommit=$(git rev-parse --short HEAD)"
+               env GOOS=linux GOARCH=arm64 go build -ldflags "-X main.GitCommit=$(git rev-parse --short HEAD)"
            else
                go build -ldflags "-X main.GitCommit=$(git rev-parse --short HEAD)"
+           fi
             
 
     - name: Display file structure
