--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,13 +36,12 @@ jobs:
         GO111MODULE: "auto"
 
     - name: Build
-      run: |
-           if [ "$RUNNER_ARCH" == "arm64" ]; then
-               env GOOS=linux GOARCH=arm64 go build -ldflags "-X main.GitCommit=$(git rev-parse --short HEAD)"
-           else
-               go build -ldflags "-X main.GitCommit=$(git rev-parse --short HEAD)"
-           fi
-            
+      if: runner.arch != 'arm64'
+      run:  go build -ldflags "-X main.GitCommit=$(git rev-parse --short HEAD)"
+
+    - name: Build arm64
+      if: runner.arch == 'arm64'
+      run: GOOS=linux GOARCH=arm64 go build -ldflags "-X main.GitCommit=$(git rev-parse --short HEAD)" 
 
     - name: Display file structure
       run: ls -R
